--- a/style.css
+++ b/style.css
@@ -98,10 +98,22 @@ text-align: justify;
 
 /* galerie */
 
+
 .gallery-img {
-  width: 400px;
-  height: 200px;
-  object-fit: cover;
+  width: 400px; /* Largeur fixe */
+  height: 200px; /* Hauteur fixe */
+  object-fit: cover; /* Remplissage de l'image */
+  object-position: 50% 50%; /* Position par défaut */
+}
+
+
+/* Ajustements pour les petits écrans */
+@media (max-width: 576px) {
+  .gallery-img {
+    width: 100%; /* Pleine largeur sur petits écrans */
+    height: 350px; /* Hauteur ajustée pour petits écrans */
+    object-position: 50% 50%; /* Centrage sur petits écrans */
+  }
 }
 /* #main-nav {
     transition: all 1s ease;
